--- a/GodotFrontend/.godot/editor/editor_layout.cfg
+++ b/GodotFrontend/.godot/editor/editor_layout.cfg
@@ -19,16 +19,16 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://units/goblin_club25X25.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://units/", "res://assets/", "res://assets/UI/", "res://assets/3d/troops/Orcs/", "res://assets/3d/troops/Dwarfs/", "res://assets/3d/troops/Bases/")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/3d/troops/Dwarfs/longbeard.glb")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://units/", "res://assets/", "res://assets/UI/", "res://assets/3d/", "res://assets/3d/troops/", "res://assets/3d/troops/Orcs/", "res://assets/3d/troops/Dwarfs/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://UICanvas.tscn", "res://dices_resources/dicecool.tscn", "res://Start.tscn", "res://battlefield.tscn", "res://units/slayer25X25.tscn", "res://units/gyrocopter50x50.tscn", "res://units/goblin_club25X25.tscn")
-current_scene="res://units/goblin_club25X25.tscn"
+open_scenes=PackedStringArray("res://UICanvas.tscn", "res://dices_resources/dicecool.tscn", "res://Start.tscn", "res://battlefield.tscn", "res://units/slayer25X25.tscn", "res://units/gyrocopter50x50.tscn", "res://units/longbeard25X25.tscn")
+current_scene="res://units/longbeard25X25.tscn"
 center_split_offset=-598
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=1
