adding randomness to skeleton troops

--- a/GodotFrontend/.godot/editor/editor_layout.cfg
+++ b/GodotFrontend/.godot/editor/editor_layout.cfg
@@ -12,41 +12,47 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=433
-dock_hsplit_3=-363
+dock_hsplit_2=339
+dock_hsplit_3=-801
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/3d/troops/Dwarfs/longbeard.glb")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://units/", "res://assets/", "res://assets/UI/", "res://assets/3d/", "res://assets/3d/troops/", "res://assets/3d/troops/Orcs/", "res://assets/3d/troops/Dwarfs/")
+dock_filesystem_selected_paths=PackedStringArray("res://units/slayer25X25.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://units/", "res://assets/", "res://assets/UI/", "res://assets/3d/")
+dock_bottom=[]
+dock_closed=[]
+dock_filesystem_h_split_offset=240
+dock_filesystem_v_split_offset=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://UICanvas.tscn", "res://dices_resources/dicecool.tscn", "res://Start.tscn", "res://battlefield.tscn", "res://units/slayer25X25.tscn", "res://units/gyrocopter50x50.tscn", "res://units/longbeard25X25.tscn")
-current_scene="res://units/longbeard25X25.tscn"
-center_split_offset=-598
-selected_default_debugger_tab_idx=0
+open_scenes=PackedStringArray("res://UICanvas.tscn", "res://dices_resources/dicecool.tscn", "res://Start.tscn", "res://battlefield.tscn", "res://units/longbeard25X25.tscn", "res://units/orc30x30.tscn", "res://units/slayer25X25.tscn", "res://units/goblin25x25.tscn", "res://units/dwarf25x25.tscn", "res://units/dragon_unit.tscn")
+current_scene="res://units/slayer25X25.tscn"
+center_split_offset=-444
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=1
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
 open_scripts=[]
 selected_script=""
-open_help=["CollisionObject3D", "Shape3D"]
+open_help=["CollisionObject3D", "SeparationRayShape3D", "Shape3D"]
 script_split_offset=226
 list_split_offset=0
+zoom_factor=1.0
 
 [ShaderEditor]
 
 open_shaders=[]
 split_offset=0
 selected_shader=""
+text_shader_zoom_factor=1.0
 
 [editor_log]
 
