--- a/GodotFrontend/Properties/launchSettings.json
+++ b/GodotFrontend/Properties/launchSettings.json
@@ -5,7 +5,7 @@
     },
     "Perfil 1": {
       "commandName": "Executable",
-      "executablePath": "C:\\dev\\godotcsharp\\Godot_v4.2.2-stable_mono_win64.exe",
+      "executablePath": "C:\\dev\\Godot_v4.3-stable_mono_win64\\Godot_v4.3-stable_mono_win64.exe",
       "commandLineArgs": "--path . --verbose",
       "workingDirectory": ".",
       "nativeDebugging": true
