fixing old errors

--- a/GodotFrontend/.godot/editor/editor_layout.cfg
+++ b/GodotFrontend/.godot/editor/editor_layout.cfg
@@ -12,15 +12,15 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=339
-dock_hsplit_3=-801
+dock_hsplit_2=170
+dock_hsplit_3=-216
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://units/slayer25X25.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://units/", "res://assets/", "res://assets/UI/", "res://assets/3d/")
+dock_filesystem_selected_paths=PackedStringArray("res://units/longbeard25X25.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://units/", "res://assets/", "res://assets/UI/", "res://assets/3d/", "res://assets/3d/troops/", "res://assets/3d/troops/Dwarfs/")
 dock_bottom=[]
 dock_closed=[]
 dock_filesystem_h_split_offset=240
@@ -31,12 +31,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://UICanvas.tscn", "res://dices_resources/dicecool.tscn", "res://Start.tscn", "res://battlefield.tscn", "res://units/longbeard25X25.tscn", "res://units/orc30x30.tscn", "res://units/slayer25X25.tscn", "res://units/goblin25x25.tscn", "res://units/dwarf25x25.tscn", "res://units/dragon_unit.tscn")
-current_scene="res://units/slayer25X25.tscn"
-center_split_offset=-444
+open_scenes=PackedStringArray("res://UICanvas.tscn", "res://dices_resources/dicecool.tscn", "res://Start.tscn", "res://battlefield.tscn", "res://units/longbeard25X25.tscn", "res://units/orc30x30.tscn", "res://units/slayer25X25.tscn", "res://units/goblin25x25.tscn", "res://units/dwarf25x25.tscn", "res://units/dragon_unit.tscn", "res://assets/3d/troops/Dwarfs/dwarf2.glb", "res://assets/3d/troops/Dwarfs/longbeardanim.glb", "res://units/knight_unit.tscn", "res://units/dragon.tscn")
+current_scene="res://units/dragon.tscn"
+center_split_offset=-930
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=1
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
