--- a/GodotFrontend/.godot/editor/editor_layout.cfg
+++ b/GodotFrontend/.godot/editor/editor_layout.cfg
@@ -12,7 +12,7 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=831
+dock_hsplit_2=512
 dock_hsplit_3=-724
 dock_hsplit_4=0
 dock_filesystem_split=0
@@ -31,17 +31,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://UICanvas.tscn", "res://dices_resources/dicecool.tscn", "res://Start.tscn", "res://battlefield.tscn", "res://units/vfx/selection_fx.tscn")
-current_scene="res://battlefield.tscn"
+open_scenes=PackedStringArray("res://UICanvas.tscn", "res://dices_resources/dicecool.tscn", "res://Start.tscn", "res://battlefield.tscn", "res://units/vfx/selection_fx.tscn", "res://units/vfx/selection_particles.tscn")
+current_scene="res://units/vfx/selection_particles.tscn"
 center_split_offset=-437
-selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
+selected_default_debugger_tab_idx=1
+selected_main_editor_idx=2
 selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://battlefieldManager.cs", "res://units/Unidad.cs"]
-selected_script="res://battlefieldManager.cs"
+open_scripts=["res://battlefieldManager.cs", "res://code/InputManager.cs", "res://units/Unidad.cs"]
+selected_script="res://code/InputManager.cs"
 open_help=["CollisionObject3D", "SeparationRayShape3D", "Shape3D"]
 script_split_offset=226
 list_split_offset=0
@@ -49,9 +49,9 @@ zoom_factor=1.0
 
 [ShaderEditor]
 
-open_shaders=["res://selectshader.gdshader"]
+open_shaders=["res://units/vfx/selectshader.gdshader"]
 split_offset=200
-selected_shader="res://selectshader.gdshader"
+selected_shader="res://units/vfx/selectshader.gdshader"
 text_shader_zoom_factor=1.0
 
 [editor_log]
