creating spell cards

--- a/GodotFrontend/.godot/editor/script_editor_cache.cfg
+++ b/GodotFrontend/.godot/editor/script_editor_cache.cfg
@@ -31,13 +31,13 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 73,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 19,
 "scroll_position": 0.0,
 "selection": false,
-"syntax_highlighter": "Standard"
+"syntax_highlighter": "Estándar"
 }
 
 [res://code/InputManager.cs]
@@ -49,7 +49,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 79,
-"scroll_position": 79.0,
+"scroll_position": 67.0,
 "selection": false,
 "syntax_highlighter": "Estándar"
 }
