--- a/GodotFrontend/.godot/editor/editor_layout.cfg
+++ b/GodotFrontend/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://units/vfx/selection_fx.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://units/vfx/arrow.png")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://units/", "res://units/vfx/", "res://assets/", "res://assets/3d/troops/", "res://assets/3d/troops/Dwarfs/")
 dock_bottom=[]
 dock_closed=[]
@@ -32,16 +32,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://UICanvas.tscn", "res://dices_resources/dicecool.tscn", "res://Start.tscn", "res://battlefield.tscn", "res://units/vfx/selection_fx.tscn", "res://units/vfx/selection_particles.tscn")
-current_scene="res://units/vfx/selection_particles.tscn"
-center_split_offset=-437
+current_scene="res://UICanvas.tscn"
+center_split_offset=-588
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_main_editor_idx=0
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://battlefieldManager.cs", "res://code/InputManager.cs", "res://units/Unidad.cs"]
-selected_script="res://code/InputManager.cs"
+open_scripts=["res://battlefieldManager.cs", "res://code/InputManager.cs", "res://UIcode/UICanvas.cs", "res://units/Unidad.cs"]
+selected_script="res://UIcode/UICanvas.cs"
 open_help=["CollisionObject3D", "SeparationRayShape3D", "Shape3D"]
 script_split_offset=226
 list_split_offset=0
