--- a/GodotFrontend/.godot/editor/editor_layout.cfg
+++ b/GodotFrontend/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://units/vfx/arrow.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://units/", "res://units/vfx/", "res://assets/", "res://assets/3d/troops/", "res://assets/3d/troops/Dwarfs/")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/UI/Spells/arrowattr.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://units/", "res://units/vfx/", "res://assets/", "res://assets/UI/", "res://assets/UI/Spells/", "res://assets/3d/troops/", "res://assets/3d/troops/Dwarfs/")
 dock_bottom=[]
 dock_closed=[]
 dock_filesystem_h_split_offset=240
@@ -36,7 +36,7 @@ current_scene="res://UICanvas.tscn"
 center_split_offset=-588
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_bottom_panel_item=7
 
 [ScriptEditor]
 
@@ -49,9 +49,9 @@ zoom_factor=1.0
 
 [ShaderEditor]
 
-open_shaders=["res://units/vfx/selectshader.gdshader"]
+open_shaders=["res://units/vfx/selectshader.gdshader", "res://Spellselectioncanvas.gdshader"]
 split_offset=200
-selected_shader="res://units/vfx/selectshader.gdshader"
+selected_shader="res://Spellselectioncanvas.gdshader"
 text_shader_zoom_factor=1.0
 
 [editor_log]
