--- a/GodotFrontend/.godot/editor/script_editor_cache.cfg
+++ b/GodotFrontend/.godot/editor/script_editor_cache.cfg
@@ -81,3 +81,45 @@ state={
 "selection": false,
 "syntax_highlighter": "Estándar"
 }
+
+[res://Spells/SpellCard.cs]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 33,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 12,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "Estándar"
+}
+
+[res://UISpellManager.cs]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "Estándar"
+}
+
+[res://Spells/UISpellManager.cs]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 20,
+"scroll_position": 5.0,
+"selection": false,
+"syntax_highlighter": "Estándar"
+}
