--- a/GodotFrontend/.godot/editor/editor_layout.cfg
+++ b/GodotFrontend/.godot/editor/editor_layout.cfg
@@ -12,15 +12,15 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=512
-dock_hsplit_3=-724
+dock_hsplit_2=474
+dock_hsplit_3=-479
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/UI/Spells/arrowattr.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://units/", "res://units/vfx/", "res://assets/", "res://assets/UI/", "res://assets/UI/Spells/", "res://assets/3d/troops/", "res://assets/3d/troops/Dwarfs/")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/UI/Spells/fireball.jpg")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Spells/", "res://assets/", "res://assets/UI/", "res://assets/UI/Spells/", "res://assets/3d/troops/", "res://assets/3d/troops/Dwarfs/")
 dock_bottom=[]
 dock_closed=[]
 dock_filesystem_h_split_offset=240
@@ -31,16 +31,16 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://UICanvas.tscn", "res://dices_resources/dicecool.tscn", "res://Start.tscn", "res://battlefield.tscn", "res://units/vfx/selection_fx.tscn", "res://units/vfx/selection_particles.tscn")
+open_scenes=PackedStringArray("res://UICanvas.tscn", "res://dices_resources/dicecool.tscn", "res://Start.tscn", "res://battlefield.tscn", "res://Spells/spell_card.tscn")
 current_scene="res://UICanvas.tscn"
 center_split_offset=-588
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=0
-selected_bottom_panel_item=7
+selected_main_editor_idx=2
+selected_bottom_panel_item=10
 
 [ScriptEditor]
 
-open_scripts=["res://battlefieldManager.cs", "res://code/InputManager.cs", "res://UIcode/UICanvas.cs", "res://units/Unidad.cs"]
+open_scripts=["res://battlefieldManager.cs", "res://code/InputManager.cs", "res://Spells/SpellCard.cs", "res://UIcode/UICanvas.cs", "res://Spells/UISpellManager.cs", "res://units/Unidad.cs"]
 selected_script="res://UIcode/UICanvas.cs"
 open_help=["CollisionObject3D", "SeparationRayShape3D", "Shape3D"]
 script_split_offset=226
