--- a/GodotFrontend/.godot/editor/editor_layout.cfg
+++ b/GodotFrontend/.godot/editor/editor_layout.cfg
@@ -13,7 +13,7 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=474
-dock_hsplit_3=-479
+dock_hsplit_3=-1164
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
@@ -35,12 +35,12 @@ open_scenes=PackedStringArray("res://UICanvas.tscn", "res://dices_resources/dice
 current_scene="res://UICanvas.tscn"
 center_split_offset=-588
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://battlefieldManager.cs", "res://code/InputManager.cs", "res://Spells/SpellCard.cs", "res://UIcode/UICanvas.cs", "res://Spells/UISpellManager.cs", "res://units/Unidad.cs"]
+open_scripts=["res://battlefieldManager.cs", "res://Spells/SpellCard.cs", "res://UIcode/UICanvas.cs", "res://Spells/UISpellManager.cs", "res://units/Unidad.cs"]
 selected_script="res://UIcode/UICanvas.cs"
 open_help=["CollisionObject3D", "SeparationRayShape3D", "Shape3D"]
 script_split_offset=226
