--- a/GodotFrontend/.godot/editor/script_editor_cache.cfg
+++ b/GodotFrontend/.godot/editor/script_editor_cache.cfg
@@ -95,3 +95,31 @@ state={
 "selection": false,
 "syntax_highlighter": "Estándar"
 }
+
+[res://UIcode/StartMenu.cs]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "Estándar"
+}
+
+[res://code/Input/InputMovePhase.cs]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "Estándar"
+}
