--- a/GodotFrontend/.godot/editor/editor_layout.cfg
+++ b/GodotFrontend/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://units/vfx/selection_fx.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://units/vfx/magic_selectionparticles.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://units/", "res://units/vfx/", "res://Spells/", "res://assets/", "res://assets/UI/", "res://assets/UI/Spells/", "res://assets/3d/troops/", "res://assets/3d/troops/Dwarfs/")
 dock_bottom=[]
 dock_closed=[]
@@ -31,8 +31,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://UICanvas.tscn", "res://dices_resources/dicecool.tscn", "res://battlefield.tscn", "res://Spells/spell_card.tscn", "res://units/vfx/magic_selection_fx.tscn")
-current_scene="res://units/vfx/magic_selection_fx.tscn"
+open_scenes=PackedStringArray("res://UICanvas.tscn", "res://battlefield.tscn", "res://Spells/spell_card.tscn", "res://units/vfx/magic_selectionparticles.tscn", "res://units/vfx/selection_particles.tscn", "res://units/vfx/selection_fx.tscn")
+current_scene="res://units/vfx/magic_selectionparticles.tscn"
 center_split_offset=-588
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=1
@@ -49,9 +49,9 @@ zoom_factor=1.0
 
 [ShaderEditor]
 
-open_shaders=["res://units/vfx/selectshader.gdshader", "res://Spellselectioncanvas.gdshader"]
+open_shaders=["res://units/vfx/selectshader.gdshader", "res://Spellselectioncanvas.gdshader", "res://units/vfx/magicselectshader.gdshader"]
 split_offset=200
-selected_shader="res://Spellselectioncanvas.gdshader"
+selected_shader="res://units/vfx/magicselectshader.gdshader"
 text_shader_zoom_factor=1.0
 
 [editor_log]
