finishing magic ui selection

--- a/GodotFrontend/.godot/editor/editor_layout.cfg
+++ b/GodotFrontend/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://units/vfx/magic_selectionparticles.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://units/vfx/selection_fx.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://units/", "res://units/vfx/", "res://Spells/", "res://assets/", "res://assets/UI/", "res://assets/UI/Spells/", "res://assets/3d/troops/", "res://assets/3d/troops/Dwarfs/")
 dock_bottom=[]
 dock_closed=[]
@@ -31,17 +31,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://UICanvas.tscn", "res://battlefield.tscn", "res://Spells/spell_card.tscn", "res://units/vfx/magic_selectionparticles.tscn", "res://units/vfx/selection_particles.tscn", "res://units/vfx/selection_fx.tscn")
-current_scene="res://units/vfx/magic_selectionparticles.tscn"
+open_scenes=PackedStringArray("res://UICanvas.tscn", "res://battlefield.tscn", "res://Spells/spell_card.tscn", "res://units/vfx/magic_selectionparticles.tscn", "res://units/vfx/selection_particles.tscn", "res://units/vfx/selection_fx.tscn", "res://units/vfx/magic_selection_fx.tscn")
+current_scene="res://UICanvas.tscn"
 center_split_offset=-588
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=1
-selected_bottom_panel_item=0
+selected_main_editor_idx=0
+selected_bottom_panel_item=7
 
 [ScriptEditor]
 
-open_scripts=["res://battlefieldManager.cs", "res://code/Input/InputMovePhase.cs", "res://Spells/SpellCard.cs", "res://UIcode/StartMenu.cs", "res://UIcode/UICanvas.cs", "res://Spells/UISpellManager.cs", "res://units/Unidad.cs"]
-selected_script="res://battlefieldManager.cs"
+open_scripts=["res://battlefieldManager.cs", "res://Spells/ConfirmPanel.cs", "res://code/Input/InputMovePhase.cs", "res://Spells/SpellCard.cs", "res://UIcode/StartMenu.cs", "res://UIcode/UICanvas.cs", "res://Spells/UISpellManager.cs", "res://units/Unidad.cs"]
+selected_script="res://UIcode/UICanvas.cs"
 open_help=["CollisionObject3D", "SeparationRayShape3D", "Shape3D"]
 script_split_offset=226
 list_split_offset=0
@@ -51,7 +51,7 @@ zoom_factor=1.0
 
 open_shaders=["res://units/vfx/selectshader.gdshader", "res://Spellselectioncanvas.gdshader", "res://units/vfx/magicselectshader.gdshader"]
 split_offset=200
-selected_shader="res://units/vfx/magicselectshader.gdshader"
+selected_shader="res://units/vfx/selectshader.gdshader"
 text_shader_zoom_factor=1.0
 
 [editor_log]
