--- a/GodotFrontend/.godot/editor/editor_layout.cfg
+++ b/GodotFrontend/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/UI/card_texture.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://units/", "res://units/vfx/", "res://Spells/", "res://assets/", "res://assets/UI/", "res://assets/UI/Spells/", "res://assets/3d/troops/", "res://assets/3d/troops/Dwarfs/")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/3d/grass/grass_blade_normlasYUP.res")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://assets/", "res://assets/tex/", "res://assets/tex/grass/", "res://assets/3d/", "res://assets/3d/grass/")
 dock_bottom=[]
 dock_closed=[]
 dock_filesystem_h_split_offset=240
@@ -31,27 +31,27 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://UICanvas.tscn", "res://battlefield.tscn", "res://Spells/spell_card.tscn", "res://units/vfx/magic_selectionparticles.tscn", "res://units/vfx/selection_particles.tscn", "res://units/vfx/selection_fx.tscn", "res://units/vfx/magic_selection_fx.tscn")
-current_scene="res://Spells/spell_card.tscn"
-center_split_offset=-428
+open_scenes=PackedStringArray("res://UICanvas.tscn", "res://Spells/spell_card.tscn", "res://battlefield.tscn")
+current_scene="res://battlefield.tscn"
+center_split_offset=-619
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=0
-selected_bottom_panel_item=10
+selected_main_editor_idx=1
+selected_bottom_panel_item=7
 
 [ScriptEditor]
 
-open_scripts=["res://battlefieldManager.cs", "res://Spells/ConfirmPanel.cs", "res://code/Input/InputMovePhase.cs", "res://Spells/SpellCard.cs", "res://UIcode/StartMenu.cs", "res://UIcode/UICanvas.cs", "res://Spells/UISpellManager.cs", "res://units/Unidad.cs"]
-selected_script="res://Spells/SpellCard.cs"
-open_help=["CollisionObject3D", "SeparationRayShape3D", "Shape3D"]
+open_scripts=["res://battlefieldManager.cs", "res://Spells/SpellCard.cs", "res://UIcode/UICanvas.cs", "res://units/Unidad.cs"]
+selected_script="res://battlefieldManager.cs"
+open_help=[]
 script_split_offset=226
 list_split_offset=0
 zoom_factor=1.0
 
 [ShaderEditor]
 
-open_shaders=["res://units/vfx/selectshader.gdshader", "res://Spellselectioncanvas.gdshader", "res://units/vfx/magicselectshader.gdshader"]
-split_offset=200
-selected_shader="res://units/vfx/selectshader.gdshader"
+open_shaders=["res://units/vfx/selectshader.gdshader", "res://Spellselectioncanvas.gdshader", "res://units/vfx/magicselectshader.gdshader", "res://assets/3d/grass/grass_blade_normals.gdshader"]
+split_offset=216
+selected_shader="res://assets/3d/grass/grass_blade_normals.gdshader"
 text_shader_zoom_factor=1.0
 
 [editor_log]
