--- a/GodotFrontend/.godot/editor/editor_layout.cfg
+++ b/GodotFrontend/.godot/editor/editor_layout.cfg
@@ -12,14 +12,14 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=474
-dock_hsplit_3=-713
+dock_hsplit_2=567
+dock_hsplit_3=-832
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/3d/grass/grass_blade_normlasYUP.res")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/3d/grass/test_text.png")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://assets/", "res://assets/tex/", "res://assets/tex/grass/", "res://assets/3d/", "res://assets/3d/grass/")
 dock_bottom=[]
 dock_closed=[]
@@ -40,7 +40,7 @@ selected_bottom_panel_item=7
 
 [ScriptEditor]
 
-open_scripts=["res://battlefieldManager.cs", "res://Spells/SpellCard.cs", "res://UIcode/UICanvas.cs", "res://units/Unidad.cs"]
+open_scripts=["res://battlefieldManager.cs", "res://Spells/SpellCard.cs"]
 selected_script="res://battlefieldManager.cs"
 open_help=[]
 script_split_offset=226
