--- a/GodotFrontend/.godot/editor/editor_layout.cfg
+++ b/GodotFrontend/.godot/editor/editor_layout.cfg
@@ -35,13 +35,13 @@ open_scenes=PackedStringArray("res://UICanvas.tscn", "res://Spells/spell_card.ts
 current_scene="res://battlefield.tscn"
 center_split_offset=-619
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=1
+selected_main_editor_idx=2
 selected_bottom_panel_item=7
 
 [ScriptEditor]
 
-open_scripts=["res://battlefieldManager.cs", "res://Spells/SpellCard.cs"]
-selected_script="res://battlefieldManager.cs"
+open_scripts=[]
+selected_script=""
 open_help=[]
 script_split_offset=226
 list_split_offset=0
