--- a/GodotFrontend/.godot/editor/editor_layout.cfg
+++ b/GodotFrontend/.godot/editor/editor_layout.cfg
@@ -12,15 +12,15 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=567
-dock_hsplit_3=-832
+dock_hsplit_2=635
+dock_hsplit_3=-424
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/3d/grass/test_text.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://assets/", "res://assets/tex/", "res://assets/tex/grass/", "res://assets/3d/", "res://assets/3d/grass/")
+dock_filesystem_selected_paths=PackedStringArray("res://units/troops/goblin_club25X25.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://units/", "res://units/troops/", "res://assets/", "res://assets/tex/grass/", "res://assets/3d/", "res://assets/3d/troops/")
 dock_bottom=[]
 dock_closed=[]
 dock_filesystem_h_split_offset=240
@@ -31,17 +31,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://UICanvas.tscn", "res://Spells/spell_card.tscn", "res://battlefield.tscn")
-current_scene="res://battlefield.tscn"
+open_scenes=PackedStringArray("res://UICanvas.tscn", "res://Spells/spell_card.tscn", "res://battlefield.tscn", "res://units/troops/orc30x30.tscn", "res://units/troops/base_unit.tscn", "res://units/troops/dwarf25x25.tscn", "res://assets/3d/troops/Orcs/orc_male_with_axe.glb", "res://assets/3d/troops/Bases/MiniatureBase30x30.glb", "res://units/troops/gyrocopter50x50.tscn", "res://units/troops/goblin_wizard25X25.tscn", "res://units/troops/goblin_club25X25.tscn")
+current_scene="res://units/troops/goblin_club25X25.tscn"
 center_split_offset=-619
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=2
-selected_bottom_panel_item=7
+selected_main_editor_idx=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://Spells/SpellCard.cs", "res://units/Unidad.cs"]
+selected_script="res://units/Unidad.cs"
 open_help=[]
 script_split_offset=226
 list_split_offset=0
@@ -49,7 +49,7 @@ zoom_factor=1.0
 
 [ShaderEditor]
 
-open_shaders=["res://units/vfx/selectshader.gdshader", "res://Spellselectioncanvas.gdshader", "res://units/vfx/magicselectshader.gdshader", "res://assets/3d/grass/grass_blade_normals.gdshader"]
+open_shaders=["res://units/vfx/selectshader.gdshader", "res://Spellselectioncanvas.gdshader", "res://units/vfx/magicselectshader.gdshader", "res://assets/3d/grass/grass_blade_normals.gdshader", "res://code/terrainshader/battlefield.gdshader"]
 split_offset=216
 selected_shader="res://assets/3d/grass/grass_blade_normals.gdshader"
 text_shader_zoom_factor=1.0
