--- a/GodotFrontend/.godot/editor/script_editor_cache.cfg
+++ b/GodotFrontend/.godot/editor/script_editor_cache.cfg
@@ -179,3 +179,17 @@ state={
 "selection": false,
 "syntax_highlighter": "Estándar"
 }
+
+[res://units/UnitRenderCreator.cs]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 75,
+"scroll_position": 72.0,
+"selection": false,
+"syntax_highlighter": "Estándar"
+}
