created action container

--- a/GodotFrontend/.godot/editor/script_editor_cache.cfg
+++ b/GodotFrontend/.godot/editor/script_editor_cache.cfg
@@ -34,8 +34,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 86,
-"scroll_position": 0.0,
+"row": 84,
+"scroll_position": 38.0,
 "selection": false,
 "syntax_highlighter": "Estándar"
 }
@@ -190,6 +190,34 @@ state={
 "h_scroll_position": 0,
 "row": 75,
 "scroll_position": 72.0,
+"selection": false,
+"syntax_highlighter": "Estándar"
+}
+
+[res://UIcode/ActionContainer.cs]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "Estándar"
+}
+
+[res://UIcode/ActionButton.cs]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 51,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 3,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Estándar"
 }
