--- a/GodotFrontend/GodotFrontend.csproj
+++ b/GodotFrontend/GodotFrontend.csproj
@@ -11,4 +11,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="assets\UI\" />
+  </ItemGroup>
 </Project>
