--- a/GodotFrontend/.godot/editor/editor_layout.cfg
+++ b/GodotFrontend/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://units/troops/longbeard25X25.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://units/", "res://units/troops/", "res://assets/", "res://assets/tex/grass/", "res://assets/3d/", "res://assets/3d/troops/")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/UI/Actions_button.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://units/", "res://units/troops/", "res://UIcode/", "res://code/", "res://assets/", "res://assets/UI/", "res://assets/tex/grass/", "res://assets/3d/troops/")
 dock_bottom=[]
 dock_closed=[]
 dock_filesystem_h_split_offset=240
@@ -31,16 +31,16 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://UICanvas.tscn", "res://Spells/spell_card.tscn", "res://battlefield.tscn", "res://units/troops/orc30x30.tscn", "res://units/troops/base_unit.tscn", "res://units/troops/dwarf25x25.tscn", "res://units/troops/gyrocopter50x50.tscn", "res://units/troops/goblin_wizard25X25.tscn", "res://units/troops/goblin_club25X25.tscn", "res://units/troops/dragon_unit.tscn", "res://units/troops/longbeard25X25.tscn", "res://units/troops/slayer25X25.tscn")
+open_scenes=PackedStringArray("res://UICanvas.tscn", "res://battlefield.tscn", "res://assets/UI/Actions_button.tscn")
 current_scene="res://battlefield.tscn"
 center_split_offset=-619
-selected_default_debugger_tab_idx=1
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=1
-selected_bottom_panel_item=0
+selected_bottom_panel_item=10
 
 [ScriptEditor]
 
-open_scripts=["res://battlefieldManager.cs", "res://Spells/SpellCard.cs", "res://units/Unidad.cs"]
+open_scripts=["res://battlefieldManager.cs"]
 selected_script="res://battlefieldManager.cs"
 open_help=[]
 script_split_offset=226
