--- a/GodotFrontend/.godot/editor/editor_layout.cfg
+++ b/GodotFrontend/.godot/editor/editor_layout.cfg
@@ -12,15 +12,15 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=635
+dock_hsplit_2=291
 dock_hsplit_3=-424
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/UI/Actions_button.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://units/", "res://units/troops/", "res://UIcode/", "res://code/", "res://assets/", "res://assets/UI/", "res://assets/tex/grass/", "res://assets/3d/troops/")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/3d/arrow.glb")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://units/", "res://units/vfx/", "res://assets/", "res://assets/UI/", "res://assets/UI/Spells/", "res://assets/3d/")
 dock_bottom=[]
 dock_closed=[]
 dock_filesystem_h_split_offset=240
@@ -31,17 +31,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://UICanvas.tscn", "res://battlefield.tscn", "res://assets/UI/Actions_button.tscn")
-current_scene="res://battlefield.tscn"
+open_scenes=PackedStringArray("res://UICanvas.tscn", "res://battlefield.tscn", "res://assets/UI/Actions_button.tscn", "res://units/troops/base_unit.tscn")
+current_scene="res://UICanvas.tscn"
 center_split_offset=-619
-selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
-selected_bottom_panel_item=10
+selected_default_debugger_tab_idx=1
+selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://battlefieldManager.cs"]
-selected_script="res://battlefieldManager.cs"
+open_scripts=[]
+selected_script=""
 open_help=[]
 script_split_offset=226
 list_split_offset=0
