--- a/GodotFrontend/.godot/editor/script_editor_cache.cfg
+++ b/GodotFrontend/.godot/editor/script_editor_cache.cfg
@@ -35,26 +35,12 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 84,
-"scroll_position": 38.0,
+"scroll_position": 61.0,
 "selection": false,
 "syntax_highlighter": "Estándar"
 }
 
 [res://battlefieldManager.cs]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "Estándar"
-}
-
-[res://units/Unidad.cs]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -217,6 +203,48 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 3,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "Estándar"
+}
+
+[res://units/UnitGodot.cs]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 17,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 3,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "Estándar"
+}
+
+[res://UIcode/DragArrow.cs]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 4,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "Estándar"
+}
+
+[res://UIcode/ChargeDragArrow.cs]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Estándar"
