--- a/GodotFrontend/.godot/editor/editor_layout.cfg
+++ b/GodotFrontend/.godot/editor/editor_layout.cfg
@@ -12,21 +12,21 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=291
+dock_hsplit_2=469
 dock_hsplit_3=-424
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/3d/arrow.glb")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://units/", "res://units/vfx/", "res://assets/", "res://assets/UI/", "res://assets/UI/Spells/", "res://assets/3d/")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/UI/fonts/fight16cleaned.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://units/", "res://units/vfx/", "res://assets/", "res://assets/UI/", "res://assets/UI/fonts/")
 dock_bottom=[]
 dock_closed=[]
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
-dock_3="Scene,Import"
-dock_4="FileSystem"
+dock_3="Scene"
+dock_4="FileSystem,Import"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
@@ -35,13 +35,12 @@ open_scenes=PackedStringArray("res://UICanvas.tscn", "res://battlefield.tscn", "
 current_scene="res://UICanvas.tscn"
 center_split_offset=-619
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_main_editor_idx=0
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://UIcode/UICanvas.cs"]
+selected_script="res://UIcode/UICanvas.cs"
 open_help=[]
 script_split_offset=226
 list_split_offset=0
