keep woprking on charging selection and flow

--- a/GodotFrontend/.godot/editor/editor_layout.cfg
+++ b/GodotFrontend/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/UI/fonts/fight16cleaned.png")
+dock_filesystem_selected_paths=PackedStringArray("res://")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://units/", "res://units/vfx/", "res://assets/", "res://assets/UI/", "res://assets/UI/fonts/")
 dock_bottom=[]
 dock_closed=[]
@@ -36,6 +36,7 @@ current_scene="res://UICanvas.tscn"
 center_split_offset=-619
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=0
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
