cleaning/imporoving action container

--- a/GodotFrontend/.godot/editor/editor_layout.cfg
+++ b/GodotFrontend/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://units/troops/dragon_unit.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://units/", "res://units/vfx/", "res://units/troops/", "res://assets/", "res://assets/UI/", "res://assets/UI/fonts/")
+dock_filesystem_selected_paths=PackedStringArray("res://units/label_response.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://units/", "res://units/troops/", "res://UIcode/", "res://assets/", "res://assets/UI/", "res://assets/UI/fonts/")
 dock_bottom=[]
 dock_closed=[]
 dock_filesystem_h_split_offset=240
@@ -31,17 +31,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://UICanvas.tscn", "res://battlefield.tscn", "res://assets/UI/Actions_button.tscn", "res://units/troops/base_unit.tscn", "res://units/troops/slayer25X25.tscn", "res://units/troops/goblin_club25X25.tscn", "res://units/troops/goblin_wizard25X25.tscn", "res://units/troops/dragon_unit.tscn")
-current_scene="res://units/troops/dragon_unit.tscn"
+open_scenes=PackedStringArray("res://UICanvas.tscn", "res://battlefield.tscn", "res://assets/UI/Actions_button.tscn", "res://units/troops/base_unit.tscn", "res://units/troops/slayer25X25.tscn", "res://units/troops/goblin_club25X25.tscn", "res://units/troops/goblin_wizard25X25.tscn", "res://units/troops/dragon_unit.tscn", "res://units/label_response.tscn")
+current_scene="res://UICanvas.tscn"
 center_split_offset=-619
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=1
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://battlefieldManager.cs", "res://UIcode/UICanvas.cs", "res://units/UnitGodot.cs"]
-selected_script="res://units/UnitGodot.cs"
+selected_script="res://UIcode/UICanvas.cs"
 open_help=[]
 script_split_offset=226
 list_split_offset=0
