finishing primitive tilt-shift

--- a/GodotFrontend/.godot/editor/editor_layout.cfg
+++ b/GodotFrontend/.godot/editor/editor_layout.cfg
@@ -12,14 +12,14 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=469
-dock_hsplit_3=-424
+dock_hsplit_2=603
+dock_hsplit_3=-465
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://units/label_response.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://units/", "res://units/troops/", "res://UIcode/", "res://assets/", "res://assets/UI/", "res://assets/UI/fonts/")
 dock_bottom=[]
 dock_closed=[]
@@ -32,16 +32,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://UICanvas.tscn", "res://battlefield.tscn", "res://assets/UI/Actions_button.tscn", "res://units/troops/base_unit.tscn", "res://units/troops/slayer25X25.tscn", "res://units/troops/goblin_club25X25.tscn", "res://units/troops/goblin_wizard25X25.tscn", "res://units/troops/dragon_unit.tscn", "res://units/label_response.tscn")
-current_scene="res://UICanvas.tscn"
-center_split_offset=-619
+current_scene="res://battlefield.tscn"
+center_split_offset=-840
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_main_editor_idx=1
+selected_bottom_panel_item=7
 
 [ScriptEditor]
 
-open_scripts=["res://battlefieldManager.cs", "res://UIcode/UICanvas.cs", "res://units/UnitGodot.cs"]
-selected_script="res://UIcode/UICanvas.cs"
+open_scripts=["res://UIcode/ActionButton.cs", "res://battlefieldManager.cs", "res://code/FieldCameraControl.cs", "res://UIcode/UICanvas.cs", "res://units/UnitGodot.cs"]
+selected_script="res://battlefieldManager.cs"
 open_help=[]
 script_split_offset=226
 list_split_offset=0
@@ -49,9 +49,9 @@ zoom_factor=1.0
 
 [ShaderEditor]
 
-open_shaders=["res://units/vfx/selectshader.gdshader", "res://Spellselectioncanvas.gdshader", "res://units/vfx/magicselectshader.gdshader", "res://assets/3d/grass/grass_blade_normals.gdshader", "res://code/terrainshader/battlefield.gdshader"]
-split_offset=216
-selected_shader="res://assets/3d/grass/grass_blade_normals.gdshader"
+open_shaders=["res://units/vfx/selectshader.gdshader", "res://Spellselectioncanvas.gdshader", "res://units/vfx/magicselectshader.gdshader", "res://assets/3d/grass/grass_blade_normals.gdshader", "res://code/terrainshader/battlefield.gdshader", "res://tilitshift.gdshader"]
+split_offset=200
+selected_shader="res://tilitshift.gdshader"
 text_shader_zoom_factor=1.0
 
 [editor_log]
