--- a/GodotFrontend/.godot/editor/script_editor_cache.cfg
+++ b/GodotFrontend/.godot/editor/script_editor_cache.cfg
@@ -5,11 +5,11 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 48,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 403,
+"h_scroll_position": 0,
 "row": 3,
 "scroll_position": 0.0,
 "selection": false,
-"syntax_highlighter": "Standard"
+"syntax_highlighter": "Estándar"
 }
 
 [res://code/UnitMovementManager.cs]
