graphics improvement, include sdf, basic fireball fx

--- a/GodotFrontend/.godot/global_script_class_cache.cfg
+++ b/GodotFrontend/.godot/global_script_class_cache.cfg
@@ -1,1 +1,7 @@
-list=Array[Dictionary]([])
+list=Array[Dictionary]([{
+"base": &"CompositorEffect",
+"class": &"PostProcessGrayScale",
+"icon": "",
+"language": &"GDScript",
+"path": "res://shaders/post_process.gd"
+}])
