--- a/GodotFrontend/.godot/editor/editor_layout.cfg
+++ b/GodotFrontend/.godot/editor/editor_layout.cfg
@@ -12,15 +12,15 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=603
-dock_hsplit_3=-465
+dock_hsplit_2=601
+dock_hsplit_3=-656
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://units/", "res://units/troops/", "res://UIcode/", "res://assets/", "res://assets/UI/", "res://assets/UI/fonts/")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/FX/blackSmoke00.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://units/troops/", "res://Spells/", "res://assets/", "res://assets/UI/fonts/", "res://assets/FX/")
 dock_bottom=[]
 dock_closed=[]
 dock_filesystem_h_split_offset=240
@@ -31,27 +31,27 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://UICanvas.tscn", "res://battlefield.tscn", "res://assets/UI/Actions_button.tscn", "res://units/troops/base_unit.tscn", "res://units/troops/slayer25X25.tscn", "res://units/troops/goblin_club25X25.tscn", "res://units/troops/goblin_wizard25X25.tscn", "res://units/troops/dragon_unit.tscn", "res://units/label_response.tscn")
+open_scenes=PackedStringArray("res://UICanvas.tscn", "res://battlefield.tscn", "res://assets/UI/Actions_button.tscn", "res://units/troops/base_unit.tscn", "res://Spells/fireball.tscn")
 current_scene="res://battlefield.tscn"
-center_split_offset=-840
+center_split_offset=-477
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=1
-selected_bottom_panel_item=7
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://UIcode/ActionButton.cs", "res://battlefieldManager.cs", "res://code/FieldCameraControl.cs", "res://UIcode/UICanvas.cs", "res://units/UnitGodot.cs"]
+open_scripts=["res://UIcode/ActionButton.cs", "res://battlefieldManager.cs", "res://code/FieldCameraControl.cs", "res://shaders/post_process.gd", "res://UIcode/UICanvas.cs", "res://units/UnitGodot.cs"]
 selected_script="res://battlefieldManager.cs"
 open_help=[]
-script_split_offset=226
+script_split_offset=150
 list_split_offset=0
 zoom_factor=1.0
 
 [ShaderEditor]
 
-open_shaders=["res://units/vfx/selectshader.gdshader", "res://Spellselectioncanvas.gdshader", "res://units/vfx/magicselectshader.gdshader", "res://assets/3d/grass/grass_blade_normals.gdshader", "res://code/terrainshader/battlefield.gdshader", "res://tilitshift.gdshader"]
+open_shaders=["res://units/vfx/selectshader.gdshader", "res://Spellselectioncanvas.gdshader", "res://units/vfx/magicselectshader.gdshader", "res://assets/3d/grass/grass_blade_normals.gdshader", "res://code/terrainshader/battlefield.gdshader", "res://tilitshift.gdshader", "res://SDFObjects.gdshader", "res://ObjectSDF.gdshader", "res://smokeSDF.gdshader", "res://fireballSmoke.gdshader"]
 split_offset=200
-selected_shader="res://tilitshift.gdshader"
+selected_shader="res://fireballSmoke.gdshader"
 text_shader_zoom_factor=1.0
 
 [editor_log]
