--- a/GodotFrontend/.godot/editor/script_editor_cache.cfg
+++ b/GodotFrontend/.godot/editor/script_editor_cache.cfg
@@ -45,10 +45,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 3,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
+"row": 21,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Estándar"
@@ -234,4 +234,18 @@ state={
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Estándar"
+}
+
+[res://shaders/post_process.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 110,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 145,
+"row": 93,
+"scroll_position": 70.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
 }
