smoke fireball mods

--- a/GodotFrontend/.godot/editor/project_metadata.cfg
+++ b/GodotFrontend/.godot/editor/project_metadata.cfg
@@ -64,7 +64,7 @@ project_settings=Rect2(336, 282, 900, 700)
 
 [color_picker]
 
-recent_presets=PackedColorArray(0, 0, 0, 0, 0.852018, 0.325175, 9.62615e-07, 1, 0, 0, 0, 1, 0.399568, 0.483836, 0.312196, 1, 1, 1, 1, 1, 1, 0.572549, 1, 1, 1, 0.572549, 0.341176, 1, 1, 0.572549, 0.113725, 1, 1, 1, 1, 0)
+recent_presets=PackedColorArray(0, 0, 0, 1, 0.399568, 0.483836, 0.312196, 1, 1, 0.572549, 1, 1, 1, 0.572549, 0.341176, 1, 1, 0.572549, 0.113725, 1, 1, 1, 1, 0, 0, 0, 0, 0, 1, 1, 1, 0.511278, 1, 1, 1, 1)
 picker_shape=3
 
 [project_settings]
