--- a/GodotFrontend/.godot/global_script_class_cache.cfg
+++ b/GodotFrontend/.godot/global_script_class_cache.cfg
@@ -1,6 +1,6 @@
 list=Array[Dictionary]([{
 "base": &"CompositorEffect",
-"class": &"PostProcessGrayScale",
+"class": &"TiltShiftEffect",
 "icon": "",
 "language": &"GDScript",
 "path": "res://shaders/post_process.gd"
