--- a/GodotFrontend/.godot/editor/editor_layout.cfg
+++ b/GodotFrontend/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/FX/blackSmoke00.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://units/troops/", "res://Spells/", "res://assets/", "res://assets/UI/fonts/", "res://assets/FX/")
+dock_filesystem_selected_paths=PackedStringArray("res://Spells/fireball.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Spells/", "res://assets/", "res://assets/UI/", "res://assets/UI/Spells/")
 dock_bottom=[]
 dock_closed=[]
 dock_filesystem_h_split_offset=240
@@ -32,7 +32,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://UICanvas.tscn", "res://battlefield.tscn", "res://assets/UI/Actions_button.tscn", "res://units/troops/base_unit.tscn", "res://Spells/fireball.tscn")
-current_scene="res://battlefield.tscn"
+current_scene="res://Spells/fireball.tscn"
 center_split_offset=-477
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=1
