--- a/GodotFrontend/.godot/editor/editor_layout.cfg
+++ b/GodotFrontend/.godot/editor/editor_layout.cfg
@@ -32,7 +32,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://UICanvas.tscn", "res://battlefield.tscn", "res://assets/UI/Actions_button.tscn", "res://units/troops/base_unit.tscn", "res://Spells/fireball.tscn")
-current_scene="res://Spells/fireball.tscn"
+current_scene="res://battlefield.tscn"
 center_split_offset=-477
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=1
