improved troop reform with characters

--- a/GodotFrontend/.godot/editor/editor_layout.cfg
+++ b/GodotFrontend/.godot/editor/editor_layout.cfg
@@ -31,8 +31,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://battlefield.tscn", "res://units/troops/Dwarfs/kingDwarf25x25.tscn", "res://environment.tscn", "res://units/troops/Dwarfs/gyrocopter50x50.tscn", "res://units/troops/Dwarfs/longbeard25X25.tscn", "res://units/troops/Orcs/orc30x30.tscn")
-current_scene="res://environment.tscn"
+open_scenes=PackedStringArray("res://battlefield.tscn", "res://units/troops/Dwarfs/kingDwarf25x25.tscn", "res://environment.tscn", "res://units/troops/Dwarfs/gyrocopter50x50.tscn", "res://units/troops/Dwarfs/longbeard25X25.tscn", "res://units/troops/Orcs/orc30x30.tscn", "res://UICanvas.tscn")
+current_scene="res://UICanvas.tscn"
 center_split_offset=-576
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=1
@@ -40,8 +40,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://battlefieldManager.cs", "res://shaders/post_process.gd"]
-selected_script="res://battlefieldManager.cs"
+open_scripts=["res://battlefieldManager.cs", "res://shaders/post_process.gd", "res://UIcode/UICanvas.cs"]
+selected_script="res://UIcode/UICanvas.cs"
 open_help=[]
 script_split_offset=150
 list_split_offset=0
