--- a/Core/Core - Backup.csproj
+++ b/Core/Core - Backup.csproj
@@ -32,12 +32,11 @@
   <ItemGroup>
     <PackageReference Include="Azure.Messaging.WebPubSub" Version="1.4.0" />
     <PackageReference Include="Azure.Messaging.WebPubSub.Client" Version="1.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.2">
-      <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.2" />
+    <PackageReference Include="SQLite" Version="3.13.0" />
   </ItemGroup>
 
 </Project>
