--- a/GodotFrontend/.godot/editor/editor_layout.cfg
+++ b/GodotFrontend/.godot/editor/editor_layout.cfg
@@ -12,74 +12,45 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=528
-dock_hsplit_3=-736
+dock_hsplit_2=584
+dock_hsplit_3=-270
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-<<<<<<< HEAD
-<<<<<<< Updated upstream
-dock_filesystem_selected_paths=PackedStringArray("res://assets/3d/rocks/objects/rock2.glb")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://assets/", "res://assets/tex/", "res://assets/tex/rocky_dirt1/", "res://assets/3d/", "res://assets/3d/rocks/", "res://assets/3d/rocks/objects/")
-=======
-dock_filesystem_selected_paths=PackedStringArray("res://assets/UI/BOTONBASIC.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://units/", "res://units/troops/", "res://units/troops/Orcs/", "res://assets/", "res://assets/UI/", "res://assets/UI/fonts/", "res://assets/tex/rocky_dirt1/", "res://assets/3d/", "res://assets/3d/troops/", "res://assets/3d/troops/Bases/", "res://assets/3d/rocks/objects/")
->>>>>>> Stashed changes
-=======
-dock_filesystem_selected_paths=PackedStringArray("res://assets/3d/troops/Bases/MiniatureBase30x60.glb")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://units/", "res://units/troops/", "res://units/troops/Orcs/", "res://assets/", "res://assets/tex/rocky_dirt1/", "res://assets/3d/", "res://assets/3d/troops/", "res://assets/3d/troops/Bases/", "res://assets/3d/rocks/objects/")
->>>>>>> sqlite-integration
+<<<<<<<HEAD<<<<<<<Updatedupstreamdock_filesystem_selected_paths=PackedStringArray("res://assets/3d/rocks/objects/rock2.glb")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://units/", "res://units/troops/", "res://units/troops/Dwarfs/", "res://assets/", "res://assets/3d/", "res://assets/3d/troops/", "res://assets/3d/troops/Dwarfs/")
 dock_bottom=[]
 dock_closed=[]
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
-dock_3="Scene"
-dock_4="FileSystem,Import"
+dock_filesystem_selected_paths=PackedStringArray("res://units/troops/Dwarfs/kingdwarfshield50x50.tscn")
+dock_3="Scene,Import"
+dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-<<<<<<< HEAD
-<<<<<<< Updated upstream
-open_scenes=PackedStringArray("res://battlefield.tscn", "res://units/troops/Dwarfs/kingDwarf25x25.tscn", "res://environment.tscn", "res://units/troops/Dwarfs/gyrocopter50x50.tscn", "res://units/troops/Dwarfs/longbeard25x25.tscn", "res://units/troops/Orcs/orc30x30.tscn", "res://UICanvas.tscn", "res://units/troops/Orcs/dragon_unit.tscn")
-current_scene="res://units/troops/Orcs/dragon_unit.tscn"
-=======
-open_scenes=PackedStringArray("res://battlefield.tscn", "res://units/troops/Dwarfs/kingDwarf25x25.tscn", "res://environment.tscn", "res://units/troops/Dwarfs/gyrocopter50x50.tscn", "res://units/troops/Dwarfs/longbeard25x25.tscn", "res://units/troops/Orcs/orc30x30.tscn", "res://UICanvas.tscn", "res://units/troops/Orcs/dragon_unit.tscn", "res://units/troops/Orcs/boar_rider30x60.tscn", "res://assets/UI/Actions_button.tscn")
-current_scene="res://UICanvas.tscn"
->>>>>>> Stashed changes
-=======
-open_scenes=PackedStringArray("res://battlefield.tscn", "res://units/troops/Dwarfs/kingDwarf25x25.tscn", "res://environment.tscn", "res://units/troops/Dwarfs/gyrocopter50x50.tscn", "res://units/troops/Dwarfs/longbeard25x25.tscn", "res://units/troops/Orcs/orc30x30.tscn", "res://UICanvas.tscn", "res://units/troops/Orcs/dragon_unit.tscn", "res://units/troops/Orcs/boar_rider30x60.tscn")
-current_scene="res://units/troops/Orcs/boar_rider30x60.tscn"
->>>>>>> sqlite-integration
-center_split_offset=-576
+open_scenes=PackedStringArray("res://Start.tscn", "res://battlefield.tscn", "res://units/troops/Dwarfs/kingdwarfshield50x50.tscn")
+current_scene="res://units/troops/Dwarfs/kingdwarfshield50x50.tscn"
+center_split_offset=-677
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=0
+selected_main_editor_idx=1
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://UIcode/ActionButton.cs", "res://UIcode/ActionContainer.cs", "res://battlefieldManager.cs", "res://shaders/post_process.gd", "res://UIcode/UICanvas.cs"]
-selected_script="res://UIcode/UICanvas.cs"
+open_scripts=["res://battlefieldManager.cs", "res://UIcode/StartMenu.cs"]
+selected_script="res://battlefieldManager.cs"
 open_help=[]
-script_split_offset=150
+script_split_offset=70
 list_split_offset=0
 zoom_factor=1.0
 
 [ShaderEditor]
 
-open_shaders=["res://units/vfx/selectshader.gdshader", "res://Spellselectioncanvas.gdshader", "res://units/vfx/magicselectshader.gdshader", "res://assets/3d/grass/grass_blade_normals.gdshader", "res://code/terrainshader/battlefield.gdshader", "res://tilitshift.gdshader", "res://SDFObjects.gdshader", "res://ObjectSDF.gdshader", "res://smokeSDF.gdshader", "res://fireballSmoke.gdshader", "res://shaders/terrain.gdshader"]
-split_offset=200
-selected_shader="res://assets/3d/grass/grass_blade_normals.gdshader"
+open_shaders=[]
+split_offset=0
+selected_shader=""
 text_shader_zoom_factor=1.0
-
-[editor_log]
-
-log_filter_0=true
-log_filter_2=true
-log_filter_1=false
-log_filter_3=true
-log_filter_4=false
-collapse=false
-show_search=true
